Name:                ip
Version:             0.1.0
Synopsis:            IP data structures and textual representation
Homepage:            http://github.com/sebnow/haskell-ip
License:             MIT
License-file:        LICENSE
Author:              Sebastian Nowicki
Maintainer:          sebnow@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.9.2

Source-Repository head
    type:       git
    location:   hit://github.com/sebnow/haskell-ip.git

Library
  Exposed-modules:
    Data.IP

  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.11,
    parsec == 3.1.*

test-suite test-package
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  build-depends:
      base == 4.*,
      Cabal >= 1.9.2 && < 1.11,
      parsec == 3.1.*,
      QuickCheck == 2.4.*,
      test-framework == 0.4.*,
      test-framework-quickcheck2 == 0.2.*

