Name:                ip
Version:             0.1.0
Synopsis:            IP data structures and textual representation
Homepage:            http://github.com/sebnow/haskell-ip
License:             MIT
License-file:        LICENSE
Author:              Sebastian Nowicki
Maintainer:          sebnow@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.9.2

Source-Repository head
    type:       git
    location:   hit://github.com/sebnow/haskell-ip.git

Flag benchmark
  Description:  Build benchmarking 
  Default:      False

Library
  Exposed-modules:
    Data.IP

  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.11,
    parsec == 3.1.*

test-suite test-package
  Type:           exitcode-stdio-1.0
  Main-is:        Test.hs
  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.11,
    parsec == 3.1.*,
    QuickCheck == 2.4.*,
    test-framework == 0.4.*,
    test-framework-quickcheck2 == 0.2.*

Executable benchmark
  Main-is:          Benchmark.hs
  if flag(benchmark)
    Buildable:      True
  else
    Buildable:      False
  Build-depends:
    base == 4.*,
    Cabal >= 1.9.2 && < 1.11,
    criterion == 0.5.0.*,
    parsec == 3.1.*

