name:                network-address
version:             0.2.1
Synopsis:            IP data structures and textual representation
Description:         A library for parsing, representing, computing and
                     transforming network addresses such a IPv4, IPv6
                     and subnetworks.
Homepage:            http://github.com/sebnow/haskell-network-address
License:             MIT
License-file:        LICENSE
Author:              Sebastian Nowicki
Maintainer:          sebnow@gmail.com
Category:            Data, Network
Build-type:          Simple
Extra-source-files:  README.md
cabal-version:       >=1.8

library
  exposed-modules:     Data.Network.Address, Data.Network.Address.IP
  -- other-modules:       
  build-depends:       base ==4.*, deepseq ==1.3.*, QuickCheck ==2.*
